--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
 \usepackage[T1]{fontenc}
 \usepackage[style=french]{csquotes}
+\usepackage{amsmath}
+\usepackage{amssymb}
 
 \author{Jean-Yves Girard}
 \title{Logic as a geometry of cognition \\ (La Logique comme Géométrie du Cognitif) \\ Manifest}
@@ -81,9 +83,17 @@ This example should suffice to convince us that we are attesting a real expulsio
 But \emph{what} about the \emph{commutative}? Operators commute when they are \enquote{diagonalized} by a common \enquote{basis}\footnote{}. The unsaid common in logic, in the theory of sets, of categories, is the implicit agreement on such a \enquote{basis}. All these beautiful things, sets, elements, proofs, models, language, objects, morphisms, functions, arguments... \enquote{commute}. We don't agree on anything, except on this basic, set-theoretic \enquote{arena}, where everything is played out, everything is measured. Everyone is thus based on the same location, but let's imagine a chock that shifts the gyroscopes... the questions no longer fall exactly on their answers, the marbles in their boxes. However, if logic is also Augustinian like the physical world, the interaction takes place despite the absence of a formal status. In physics, we know that it happens by means of the \emph{reducion of the wave packet}. This is what to import into logic to spice up the object/subject relation!
 
 \section{The geometric turn}
-This expression should not be taken as a rejection of the linguistic turn, to which we owe the fundamental advances. It is more of a reform, after the fossilisation that we have talked about. The linguistic idea is excellent, it is the first step of any derealisation, but as any ideology it has its cellars, its non-spoken subliminals. And here the unspoken relates to meaning. Without truly admitting it, we have supposed that language came out 
+This expression should not be taken as a rejection of the linguistic turn, to which we owe the fundamental advances. It is more of a reform, after the fossilisation that we have talked about. The linguistic idea is excellent, it is the first step of any derealisation, but as any ideology it has its cellars, its non-spoken subliminals. And here the unspoken relates to meaning. Without truly admitting it, we have supposed that language came out of an empty world, stupidly egalitarian, all ideas becoming uniformly ugly when we have coded them sufficiently, bureaucratized them, this is the atomism that we have already denounced, and let's remomber that the 20st century was also the century of Brezhnev. So do the perfectly uneducated people pretend that mathematics is $2+2=4$, thereby showing a confusion between a calcuation and a theorem; the logicians,---seemingly---very sophisticated after the linguistic turn, are rather saying that $2+2=5$ because, isn't it, language is arbitrary... Recall these people choosing their notation, they write a tensor product as $\oplus$ and a direct sum as $\otimes$, there is no favouritism in the land of symbols!
+
+That all is nothing but language, or at least, that in the manner of a table in a chinese restaurant, the world offers itself to us in various equivalent forms---including language---in a way that can be apprehended from various angles, here is a respectable thesis, which we may hold without much risk to the linguistic turn. In return, we will make the hypothesis that language is structured, that it is not that bureaucratic desert which we have just reached. But, what structure, where to search? Surely not in a verbose description of language, which leads to a pretentious and sterile essentialism. What remains is \emph{geometry}. By geometry, we don't intend anything very precise, let's say geometry is that which is sensitive to being coded, that which resists being coded.
+
+Geometry, this is the discovery of simple structures, of symmetries. Let's give an example: anyone thinks a little about logic knows that the implication $\forall x \exists y \implies \exists y \forall x$ is incorrect. But why exactly? The current explanation is that in the first case the variable $y$ depends on $x$, and in the second case, it is independent of $x$... an absurd argument! [fr: et voilà pourquoi votre fille est muette!] However, one may say more about this sad paraphrase: the universal quantifier $\forall x$ is negative, passive: it waits for something, or in other words, \enquote{give me a value $a$ for $x$ and I will give you a value for $y$}; before acting, it is in the realm of the implicit, since it refers to an $x=a$ which is unknown. Nothing like $\exists y$, which is positive, active, explicit: $\exists y$ goes to say \enquote{I have a value $b$ for $y$, I am not showing it to you, it lies at the bottom of my suitcase, but if you insist you can have it}. Positive and negative progress differently, one may always postpone the positive (the making of the decision) or, if on prefers to advance the questions, a group $+-$ may thus be replaced by a $-+$, thus, $\exists y \forall x$ implies $\forall x \exists y$, but the converse is false. This has an immense mnemonic value, as it is difficult to remember the behavior of quantification in relation to modalities; from this we remark that $\Box$ is positive, since we know the direction is $\Box\forall\implies\forall\Box$, and not the inverse.
+
+We will give an example among others of that which we call \enquote{geometry}: the logical propositions are divided into two classes, negative or positive, following their polarity.
 
 \section{Object vs subject}
+Finally, this is the connection between object/subject, the very place place of this connection that we must question.
+
 \section{The fundamental intuitions}
 \section{Did God make the integers?}
 \section*{Footnotes}
