--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -92,9 +92,14 @@ Geometry, this is the discovery of simple structures, of symmetries. Let's give 
 We will give an example among others of that which we call \enquote{geometry}: the logical propositions are divided into two classes, negative or positive, following their polarity.
 
 \section{Object vs subject}
-Finally, this is the connection between object/subject, the very place place of this connection that we must question.
+Finally, this is the connection between object/subject, the very place of this connection that we must question. Around 1900, it was reasonable to imagine mathematical objects studied by a subject who is proving theorems. This which has finally given way to a swing between syntax/semantics, organized around the properties of exchange of truth/provability: \emph{correction} \enquote{that which is provable is true} and \emph{completeness} \enquote{that which is true is provable}. \emph{Incompleteness} shows the limits of this vision, and introduces a third, the meta, which we invoke on days when the weather is bad, i.e., permanently. This is crippling, glass half-full or half-empty, matter of taste, in any case beneath the original pretentions of the \enquote{linguistic turn}. The quantum, the cognitive, give object status to the subject, not accidentally, but essentially. In the process of objectification of the subject, computer science has played a major role: we were brought back to revise the interpretative paradigms. Thereby, or by a choice between demonstration and counter-model, we preferred a dialectic model, in the very symmetric form of a play between reputedly homogeneous partners. But, the Copernician revolution has not been done, we use the expression \enquote{game semantics}, which suggests a sort of double trigger semantics: the players already express the opposition between syntax/semantics, if the game is a semantics it may not have a meta-semantics (in a meta language?)... Decidedly, there are some old clothes that stick to the skin, here again essentialism.
+
+The \emph{procedural} interpretation of logic, i.e., the logic as a logic of rules, and not as its proper meta, makes profound structures apparent, such as the aforementioned polarities. In terms of \emph{ludics}, i.e., of games, polarity is the distinction between active/passive, \enquote{I play} vs \enquote{you play}. It is also the distinction \enquote{I produce} vs \enquote{I observe}, object/subject. This distinction is fundamental and at the same time very contingent, in effect, the logical dynamics supposes an exchange of roles (I play, then you play,...); this means that the same logical statement will, in the course of its interactions, pass without stop from the status of subject to that of object and \emph{vice-versa}, discovering, such a \enquote{logical onion}, more and more profound skins. This which seems to reopen the cellar where the bond between logic/quantum sleeps: in effect, if the basical logical operations correspond to a polarization of object/subject, we include better the irreducible status which the quantum allows to the observer. Immediately, we should give a more precise sense to these remarks, these analogies, and attempt a quantum interpretation of logic (and not a logical interpretation of the quantum). In particular, try to clarify the quantum status of logical polarization, in relation, maybe with the distinction of fermion/boson.
 
 \section{The fundamental intuitions}
+
+
+
 \section{Did God make the integers?}
 \section*{Footnotes}
 
