--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -97,10 +97,14 @@ Finally, this is the connection between object/subject, the very place of this c
 The \emph{procedural} interpretation of logic, i.e., the logic as a logic of rules, and not as its proper meta, makes profound structures apparent, such as the aforementioned polarities. In terms of \emph{ludics}, i.e., of games, polarity is the distinction between active/passive, \enquote{I play} vs \enquote{you play}. It is also the distinction \enquote{I produce} vs \enquote{I observe}, object/subject. This distinction is fundamental and at the same time very contingent, in effect, the logical dynamics supposes an exchange of roles (I play, then you play,...); this means that the same logical statement will, in the course of its interactions, pass without stop from the status of subject to that of object and \emph{vice-versa}, discovering, such a \enquote{logical onion}, more and more profound skins. This which seems to reopen the cellar where the bond between logic/quantum sleeps: in effect, if the basical logical operations correspond to a polarization of object/subject, we include better the irreducible status which the quantum allows to the observer. Immediately, we should give a more precise sense to these remarks, these analogies, and attempt a quantum interpretation of logic (and not a logical interpretation of the quantum). In particular, try to clarify the quantum status of logical polarization, in relation, maybe with the distinction of fermion/boson.
 
 \section{The fundamental intuitions}
+In the last chapter of \emph{Retour du divin} (1943), Audiberti develops the myth of submarine, a kind of metaphysical hell, from which one cannot escape, the most general dreams already have a place in the ship which \enquote{embarks all}.
 
+Logic, the language paradigm, the theory of sets, the \enquote{commutative} world, this is a little like this submarine. We would like to leave, but, \emph{modulo} the translations of the 21st century, all, even the quantum, all of non-commutative geometry, all may be written in set theory, and all may be axiomatized, all is ultimately language. Worst of all, just this which has no meaning when it is formalized: thus, shouldn't we argue very strongly to convince anyone about the nullity of the logic of the [?]... But in a corner of the old woods the unavoidable sophism: \enquote{the consistency of the system is a mathematical statement which necessarily has a meaning}.
 
+However, we have the impression that, as Thom said, the limits of truth, they are not falsity, they are insignificant\footnote{}. We could reasonably maintain that Gödel's theorem, before \enquote{I am not provable}, is first \enquote{I don't want to say anything}. This idea that anything () is \emph{a priori} true or false is a \enquote{fundamental intuition} which we can hardly get rid of. An analogy in the domain of moral: we have just experienced a Manichaean war, the axis of good against the axis of evil---and
 
 \section{Did God make the integers?}
+
 \section*{Footnotes}
 
 \end{document}
